3rd commit - fix hero image on mobile

--- a/css/mobile_styles.css
+++ b/css/mobile_styles.css
@@ -15,6 +15,10 @@
         width: 100%;
         text-align: center;
         bottom: 420px ;
+        background-image: url("/images/hero-mobile.jpg");
+        background-position: top;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 
     .logo{
